# 42h

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TODO  ast.dot
buikd/tests/: tests_unit.py  tests_yaml.py  tests_yaml.yml
doc/: 42sh.1  Doxyfile  my_42sh.conf
doc/html/: annotated.html  ast_8h_source.html  classes.html  commands_8h_source.html  dir_0f6475da1188564ddb2487a30ee66c4b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  files.html  globals.html  globals_func.html  index.html  lex__match__id_8h_source.html  lex__match__if_8h_source.html  lex__match__int_8h_source.html  lex__match__loop_8h_source.html  lex__match__symbol_8h_source.html  parser_2parser__tp_8h_source.html  parser_8h_source.html  parser__tp1_8c.html  parser__tp2_8c.html  parser__tp3_8c.html  parser__tp4_8c.html  parser__tp5_8c.html  read__and__or_8c.html  read__and__or_8h_source.html  read__case_8c.html  read__case__clause_8c.html  read__case__item_8c.html  read__command_8c.html  read__command_8h_source.html  read__compound__list_8c.html  read__element_8c.html  read__element_8h_source.html  read__else_8c.html  read__for_8c.html  read__funcdec_8c.html  read__funcdec_8h_source.html  read__if_8c.html  read__input_8c.html  (+22 more)
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
src/: 42sh  Makefile  ast.dot  main.c  outfile.ps
src/ast/: #ast_and.h#  #ast_compound_list.c#  #ast_pipeline.c#  #command.c#  #tes.c#  *compilation*  .#ast_and.h  .#ast_compound_list.c  .#command.c  42sh  AST  a.out  ast.c  ast.h  ast_and.c  ast_and.h  ast_andor.c  ast_andor.h  ast_bin.h  ast_case.c  ast_case.h  ast_cmd.c  ast_cmd.h  ast_command.c  ast_command.h  ast_compound_list.c  ast_compound_list.c~  ast_compound_list.h  ast_destruct.c  ast_dogroup.c  ast_dogroup.h  ast_dogroup.h~  ast_else.c  ast_else.h  ast_execute.c  ast_for.c  ast_for.h  ast_if.c  ast_if.h  ast_list.c  (+18 more)
src/ast/ast/: ast.h  ast_and.c  ast_cmd.c  ast_for.c  ast_if.c  ast_or.c  ast_pipeline.c  ast_print.c  ast_red.c  ast_while.c  main.c
src/ast/builtin/: #builtin_exit.c#  .#builtin_exit.c  builtin.c  builtin.h  builtin_exit.c
src/ast/execution/: #exec.h#  .#exec.h  exec.h  exec_if.c  exec_node.c  exec_while.c  main.c  redirection.c  tree_traversal.c
src/builtin/: builtin.c  builtin.h  builtin_cd.c  builtin_exit.c  builtin_simple_cmd.c  builtin_while.c
src/core/: main.c
src/dot/: #generate_dot_file_ast.h#  generate_dot_file_ast.c  generate_dot_file_ast.c~  generate_dot_file_ast.h  generate_dot_file_ast.h~
src/exec/: ast.h  error.h  exec.h  exec_if.c  exec_node.c  exec_while.c  redirection.c
src/parser/: #read_and_or.c#  #read_element.c#  #read_redirection.c#  #read_redirection.h#  #read_word.c#  .#parser_tp.h  .#read_and_or.c  .#read_element.c  .#read_word.c  42sh  Makefile  a.out  ast.h  commands.h  gerenate_dot.txt  grammar.h  lex_match_id.c  lex_match_id.h  lex_match_if.c  lex_match_if.h  lex_match_int.c  lex_match_int.h  lex_match_symbol.c  lex_match_symbol.h  lexer.c  lexer.h  main.c  parser.c  parser.h  parser_capture.c  parser_capture.h  parser_init.c  parser_init.h  parser_option.c  parser_option.h  parser_read.c  parser_read.h  parser_read_tools.c  parser_read_tools.h  parser_tp.c  (+62 more)
src/parser/test/: #test_ANDOR.c#  #test_SIMPLECOMMAND.c#  .#test.h  .#test_ANDOR.c  .#test_SIMPLECOMMAND.c  test.c  test.h  test_ANDOR.c  test_ASSIGN.c  test_COMMAND.c  test_COMPOUND.c  test_DOGROUP.c  test_ELEMENT.c  test_ELSE.c  test_FOR.c  test_IF.c  test_INPUT.c  test_LIST.c  test_PIPELINE.c  test_PREFIX.c  test_REDIRECTION.c  test_SIMPLECOMMAND.c  test_UNTIL.c  test_WHILE.c  test_WORD.c  test_command.h  test_shell_command.h
src/token/: #parser.h#  lex_match_id.h  lex_match_if.c  lex_match_if.h  lex_match_int.c  lex_match_int.h  lex_match_loop.c  lex_match_loop.h  lex_match_symbol.h  parser.c  parser.h  parser_tp.c  parser_tp.c~  parser_tp.h  parser_tp.h~  token_list.c
src/utils/: main.c  string.c  string.h
tests/: test_while.yml  tests.py  tests_and_or.yml  tests_assign.yml  tests_ast.yml  tests_case.yml  tests_command.yml  tests_compound.yml  tests_dogroup.yml  tests_element.yml  tests_eof.yml  tests_for.yml  tests_funcdec.yml  tests_if.yml  tests_input.yml  tests_list.yml  tests_pipeline.yml  tests_prefix.yml  tests_redirection.yml  tests_shell_command.yml  tests_simple_command.yml  tests_unit.py  tests_word.yml  tests_yaml.py  tests_yaml.yml
